# tmp

./: .azure.yml  .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml
benchmark/: Boost.TMP-Bench.Clamp.cpp  Boost.TMP-Bench.Clamp.cpp.mako  CMakeLists.txt  mako_file_generator.py
include/: Boost.NTTMP.hpp  Boost.TMP.Base.hpp  Boost.TMP.hpp
include/boost/: CMakeLists.txt  tmp.hpp
include/boost/tmp/: always.hpp  call.hpp  comparison.hpp  decay.hpp  fusion.hpp  identity.hpp  if.hpp  lift.hpp  list_operations.hpp  logic.hpp  pack.hpp  try.hpp  vocabulary.hpp  while.hpp
include/boost/tmp_units/: atomize.hpp  composite.hpp  crtp.hpp  moleculize.hpp  named_type_impl.hpp  primaries.hpp  unit_descr.hpp  (+2 more)
modules/: Boost.TMP.ixx  CMakeLists.txt  always.ixx  call.ixx  comparison.ixx  decay.ixx  identity.ixx  if.ixx  lift.ixx  list_operations.ixx  logic.ixx  tmp_base.ixx  try.ixx  vocabulary.ixx
modules/algorithm/: Boost.TMP-Algorithm.AllOf.ixx  Boost.TMP-Algorithm.AnyOf.ixx  Boost.TMP-Algorithm.Chunk.ixx  Boost.TMP-Algorithm.Clamp.ixx  Boost.TMP-Algorithm.Comparison.ixx  Boost.TMP-Algorithm.Contains.ixx  Boost.TMP-Algorithm.Core.ixx  Boost.TMP-Algorithm.CountIf.ixx  Boost.TMP-Algorithm.Counted.ixx  Boost.TMP-Algorithm.Drop.ixx  Boost.TMP-Algorithm.DropWhile.ixx  Boost.TMP-Algorithm.Each.ixx  Boost.TMP-Algorithm.Erase.ixx  Boost.TMP-Algorithm.Extrema.ixx  Boost.TMP-Algorithm.Filter.ixx  Boost.TMP-Algorithm.FindIf.ixx  Boost.TMP-Algorithm.Flatten.ixx  Boost.TMP-Algorithm.Fold.ixx  Boost.TMP-Algorithm.FoldLeft.ixx  Boost.TMP-Algorithm.FoldRight.ixx  Boost.TMP-Algorithm.Foldey.ixx  Boost.TMP-Algorithm.FunctionIf.ixx  Boost.TMP-Algorithm.Gather.ixx  Boost.TMP-Algorithm.Index.ixx  Boost.TMP-Algorithm.Insert.ixx  Boost.TMP-Algorithm.Join.ixx  Boost.TMP-Algorithm.Logic.ixx  Boost.TMP-Algorithm.MakeSequence.ixx  Boost.TMP-Algorithm.NoneOf.ixx  Boost.TMP-Algorithm.NthValues.ixx  Boost.TMP-Algorithm.Pairing.ixx  Boost.TMP-Algorithm.Partition.ixx  Boost.TMP-Algorithm.Product.ixx  Boost.TMP-Algorithm.PushPop.ixx  Boost.TMP-Algorithm.RangeMath.ixx  Boost.TMP-Algorithm.RemoveIf.ixx  Boost.TMP-Algorithm.RemovePairs.ixx  Boost.TMP-Algorithm.ReplaceIf.ixx  Boost.TMP-Algorithm.Reverse.ixx  Boost.TMP-Algorithm.Rotate.ixx  (+43 more)
modules/base/: Boost.TMP-Base.Always.ixx  Boost.TMP-Base.Bool.ixx  Boost.TMP-Base.Byte.ixx  Boost.TMP-Base.Call.ixx  Boost.TMP-Base.Char.ixx  Boost.TMP-Base.Comparison.ixx  Boost.TMP-Base.Decay.ixx  Boost.TMP-Base.Dispatch.ixx  Boost.TMP-Base.Foldey.ixx  Boost.TMP-Base.Identity.ixx  Boost.TMP-Base.If.ixx  Boost.TMP-Base.Integral.ixx  Boost.TMP-Base.Lift.ixx  Boost.TMP-Base.List.ixx  Boost.TMP-Base.ListOperations.ixx  Boost.TMP-Base.Logic.ixx  Boost.TMP-Base.Map.ixx  Boost.TMP-Base.Maybe.ixx  Boost.TMP-Base.Nothing.ixx  Boost.TMP-Base.Result.ixx  Boost.TMP-Base.Try.ixx  Boost.TMP-Base.Types.ixx  Boost.TMP-Base.Vocabulary.ixx
modules/boost/: tmp.ixx
modules/boost/tmp/: call.ixx  comparison.ixx  decay.ixx  logic.ixx  pack.ixx
modules/boost/tmp/algorithm/: fold_right.ixx  range_math.ixx  repeat.hpp  tmp_algorithm.ixx
modules/boost/tmp/detail/: expression.hpp
modules/boost/tmp/sequence/: each.ixx  make_sequence.ixx  zip.ixx  zip_with_index.ixx
modules/detail/: Boost.TMP-Detail.Dispatch.ixx  dispatch.ixx
modules/sequence/: Boost.TMP-Sequence.Container.ixx  Boost.TMP-Sequence.Drop.ixx  Boost.TMP-Sequence.Each.ixx  Boost.TMP-Sequence.Erase.ixx  Boost.TMP-Sequence.Index.ixx  Boost.TMP-Sequence.Insert.ixx  Boost.TMP-Sequence.Join.ixx  Boost.TMP-Sequence.MakeSequence.ixx  Boost.TMP-Sequence.PopBack.ixx  Boost.TMP-Sequence.PopFront.ixx  Boost.TMP-Sequence.PushBack.ixx  Boost.TMP-Sequence.PushFront.ixx  Boost.TMP-Sequence.PushPop.ixx  Boost.TMP-Sequence.RepeatSequence.ixx  Boost.TMP-Sequence.Reverse.ixx  Boost.TMP-Sequence.Rotate.ixx  Boost.TMP-Sequence.Set.ixx  Boost.TMP-Sequence.Size.ixx  Boost.TMP-Sequence.Swap.ixx  Boost.TMP-Sequence.Take.ixx  Boost.TMP-Sequence.Tee.ixx  Boost.TMP-Sequence.Unpack.ixx  Boost.TMP-Sequence.Zip.ixx  Boost.TMP-Sequence.ZipWithIndex.ixx  container.ixx  drop.ixx  each.ixx  erase.ixx  index.ixx  insert.ixx  join.ixx  make_sequence.ixx  pop_back.ixx  pop_front.ixx  push_back.ixx  push_front.ixx  repeat_sequence.ixx  reverse.ixx  rotate.ixx  sequence.ixx  (+8 more)
modules/utils/: Boost.TMP-TestHelpers.ixx
test/: all_of_test.hpp  any_of_test.hpp  contains_test.hpp  count_if_test.hpp  drop_test.hpp  each_test.hpp  erase_test.hpp  extrema_test.hpp  filter_test.hpp  find_if_test.hpp  fold_left_test.hpp  fold_right_test.hpp  index_test.hpp  insert_test.hpp  join_test.hpp  logic_test.hpp  partition_test.hpp  pop_front_test.hpp  product_test.hpp  push_back_test.hpp  push_front_test.hpp  remove_if_test.hpp  repeat_test.hpp  replace_if_test.hpp  reverse_test.hpp  rotate_test.hpp  set_test.hpp  size_test.hpp  sort_test.hpp  swap_test.hpp  take_test.hpp  tee_test.hpp  test.cpp  test_util.hpp  transform_test.hpp  try_test.hpp  zip_with_index_test.hpp
tests/: Boost.NTTMP-Tests.cpp  Boost.NTTMP-tests.cpp  Boost.TMP-Tests.cpp  Boost.TMP.Tests-AllOf.ixx  Boost.TMP.Tests-AnyOf.ixx  Boost.TMP.Tests-Clamp.ixx  Boost.TMP.Tests-Comparison.ixx  Boost.TMP.Tests-Contains.ixx  Boost.TMP.Tests-CountIf.ixx  Boost.TMP.Tests-Drop.ixx  Boost.TMP.Tests-Each.ixx  Boost.TMP.Tests-Erase.ixx  Boost.TMP.Tests-Extrema.ixx  Boost.TMP.Tests-Filter.ixx  Boost.TMP.Tests-FindIf.ixx  Boost.TMP.Tests-Flatten.ixx  Boost.TMP.Tests-FoldLeft.ixx  Boost.TMP.Tests-FoldRight.ixx  Boost.TMP.Tests-Helpers.ixx  Boost.TMP.Tests-Index.ixx  Boost.TMP.Tests-Insert.ixx  Boost.TMP.Tests-Join.ixx  Boost.TMP.Tests-Logic.ixx  Boost.TMP.Tests-MakeSequence.ixx  Boost.TMP.Tests-Map.ixx  Boost.TMP.Tests-NoneOf.ixx  Boost.TMP.Tests-Partition.ixx  Boost.TMP.Tests-PopFront.ixx  Boost.TMP.Tests-Product.ixx  Boost.TMP.Tests-PushBack.ixx  Boost.TMP.Tests-PushFront.ixx  Boost.TMP.Tests-RangeMath.ixx  Boost.TMP.Tests-RemoveIf.ixx  Boost.TMP.Tests-RepeatSequence.ixx  Boost.TMP.Tests-ReplaceIf.ixx  Boost.TMP.Tests-Reverse.ixx  Boost.TMP.Tests-Rotate.ixx  Boost.TMP.Tests-Set.ixx  Boost.TMP.Tests-Size.ixx  Boost.TMP.Tests-Sort.ixx  (+50 more)
(+59 files in other folders)
